# LLM-IR-Compiler

./: .gitignore  CMakeLists.txt  Makefile  README.md  test.txt
include/: lexer.h  parser.h
src/: lexer.c  main.c  parser.c
